Fixed colors due to contrast issue

--- a/style/elvis/src/variables/colors.scss
+++ b/style/elvis/src/variables/colors.scss
@@ -72,15 +72,15 @@ $colors: (
   ),
   'green-lime': (
     color: #29D305,
-    contrast-text: #fff,
+    contrast-text: #000,
   ),   
   'green-lime-05': (
     color: rgba(41, 211, 5, 0.5),
-    contrast-text: #fff,
+    contrast-text: #000,
   ),   
   'green-lime-02': (
     color: rgba(41, 211, 5, 0.2),
-    contrast-text: #fff,
+    contrast-text: #000,
   ),   
   'yellow': (
     color: #FFFF00,
